2010-07-16 Christian Kruse <cjk@wwwtech.de>
	* src/hashlib.[ch]: Added a hash lib
	* src/utils/datautils.[ch]: Added data utilities
	* src/validate.[ch]: Added a lot of validation functions for URIs
	* src/readline.[ch]: Initial commit of the thread-safe buffered
		readline implementation
	* src/arrayutils.[ch]: Initial commit of the array abstraction layer
	* src/memoryutils.[ch]: Initial commit of the memory pool abstraction
		layer
	* src/treeutils.[ch]: Initial commit of an AVL tree implementation
	* src/listutils.[ch]: Initial commit of a double linked list
		abstraction
	* src/ipcutils.[ch]: Initial commit of a small IPC abstraction by
		Christian Seiler
	* src/stringutils.[ch]: Initial commit of a string abstraction

2010-07-15 Christian Kruse <cjk@wwwtech.de>
	* src/utils.[ch]: Initial commit of a basic utility library
	* conf/cforum.conf.example: added a apache style config file example

2010-07-14 Christian Kruse <cjk@wwwtech.de>
	* *: Initial commit of the complete rewrite
